<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/page_header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:background="@color/white">

        <!-- Back button -->
        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/back"
            android:textAppearance="@style/back" />

        <!-- Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/content"
            android:textAppearance="@style/content" />

        <!-- Filter -->
        <TextView
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:text="@string/filter"
            android:textAppearance="@style/filter" />

    </RelativeLayout>

    <!-- Segment buttons -->
    <LinearLayout
        android:id="@+id/segmented_c"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/page_header"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@drawable/rounded_background">

        <!-- Entrainement button -->
        <TextView
            android:id="@+id/entrainement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onEntrainementClicked"
            android:text="@string/entrainement"
            android:textAppearance="@style/entrainement" />

        <!-- Nutrition button -->
        <TextView
            android:id="@+id/nutrition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onNutritionClicked"
            android:text="@string/nutritionne"
            android:textAppearance="@style/nutritionne"
            />

    </LinearLayout>

    <!-- SearchView -->
    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/segmented_c"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_background" />

    <!-- Your other views above the posts -->
    <!-- ScrollView to hold multiple posts -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_view">

        <!-- Container for posts -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/search_view"/>
    </ScrollView>

</RelativeLayout>
