<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF"
    android:clickable="true"
    android:focusable="true"
    android:foregroundTint="#F9F9F9">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="361dp"
        android:layout_height="247dp"
        app:layout_constraintBottom_toBottomOf="@+id/signupText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/logo_foreground" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="180dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:onClick="onLoginButtonClick"
        android:text="@string/login"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toEndOf="@+id/signupText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/show_pass_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="67dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/show"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/show_pass_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="438dp"
        android:layout_marginEnd="62dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:text="@string/show"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_repassword"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/forgot_your_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="617dp"
        android:layout_marginEnd="109dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/forgot_your_pass"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="184dp"
        android:fontFamily="@font/halant_regular"
        android:text="@string/signup_login"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="291dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupText" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="291dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <EditText
        android:id="@+id/et_repassword"
        android:layout_width="291dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupText" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="291dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupText" />


    <ImageView
        android:id="@+id/cancelOutButton"
        android:layout_width="26dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="196dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/signupText"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="#BCBCBC" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="308dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="63dp"
        android:text="@string/checkBoxNewsLetter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repassword" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="310dp"
        android:layout_height="43dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="553dp"
        android:layout_marginEnd="53dp"
        android:background="@drawable/btn_custom"
        android:text="@string/signup_login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>